--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,7 +6,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: actions/setup-python@v4
+      - uses: actions/setup-python@v4
       - name: Install dependencies
         run: |
           pip install cython sphinx sphinx-design pydata-sphinx-theme numpydoc
