--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-            python-version: 3.10
+            python-version: "3.10"
       - name: Install dependencies
         run: |
           pip install cython sphinx sphinx-design pydata-sphinx-theme numpydoc
