--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "SeeMPS"
 version = "1.2"
-dependencies = ["numpy", "scipy", "h5py"]
+dependencies = ["numpy", "scipy", "h5py", "opt-einsum"]
 
 [project.urls]
 "Homepage" = "https://github.com/juanjosegarciaripoll/seemps"
