Implement Cross algorithm and pass tests.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,8 @@
         "reportUnusedVariable": "warning"
     },
     "python.testing.pytestArgs": [
-        "-n4"
-    ]
+        "tests",
+        "-s"
+    ],
+    "python.envFile": "${workspaceFolder}/.env"
 }
