--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,8 +22,7 @@
         "reportUnusedVariable": "warning"
     },
     "python.testing.pytestArgs": [
-        "tests",
-        "-s"
+        "tests"
     ],
     "python.envFile": "${workspaceFolder}/.env",
     "python.analysis.typeCheckingMode": "off",
