--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -14,15 +14,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 cython
-          pip install .
-          python setup.py build_ext --inplace
+          pip install flake8
+	  - name: Build and install
+	    run: pip install .
+      - name: Run unit tests
+        run: python -m unittest -v tests
+	  - name: Check types with mypy
+	    run: mypy seemps
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 seemps --count --exit-zero --max-complexity=10 --max-line-length=150 --ignore E741,E203,C901 --statistics
-      - name: Test with pytest
-        run: |
-          python -m unittest -v tests
