--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -15,15 +15,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8
-	  - name: Build and install
-	    run: |
-		  pip install .
+      - name: Build and install
+        run: pip install .
       - name: Run unit tests
-        run: |
-		  python -m unittest -v tests
-	  - name: Check types with mypy
-	    run: |
-		  mypy seemps
+        run: python -m unittest -v tests
+      - name: Check types with mypy
+        run: mypy seemps
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
