--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -14,13 +14,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install flake8 mypy
       - name: Build and install
         run: pip install .
       - name: Run unit tests
         run: python -m unittest -v tests
       - name: Check types with mypy
-        run: mypy seemps
+        run: mypy src/seemps
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
