--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build and install
         run: pip install .
       - name: Run unit tests
-        run: python -m unittest -v tests
+        run: python -m unittest discover -v
       - name: Check types with mypy
         run: mypy src/seemps
       - name: Lint with flake8
