--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 src\seemps --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 seemps --count --exit-zero --max-complexity=10 --max-line-length=150 --ignore E741,E203,C901 --statistics
+          flake8 src\seemps --count --exit-zero --max-complexity=10 --max-line-length=150 --ignore E741,E203,C901,W503 --statistics
