--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,31 @@ testpaths = ["tests"]
 [tool.setuptools.packages.find]
 where = ["src"]  # list of folders that contain the packages (["."] by default)
 include = ["seemps*"]  # package names should match these glob patterns (["*"] by default)
+
+[tool.ruff]
+exclude = [
+    ".git",
+	".github",
+	"__pycache__",
+	"build",
+	"dist",
+	"venv",
+	".flake8",
+]
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+[tool.ruff.format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+
+# Like Black, respect magic trailing commas.
+skip-magic-trailing-comma = false
+
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
