--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "cython>=3.0.0", "numpy"]
+requires = ["setuptools", "cython>=3.0.0", "numpy", "scipy"]
 build-backend = "setuptools.build_meta"
 
 [project]
