--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools", "cython>=3.0.0", "numpy", "scipy", "pybind11"]
-build-backend = "setuptools.build_meta"
+requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "pybind11", "numpy", "cmake"]
+build-backend = "scikit_build_core.build"
 
 [project]
 name = "SeeMPS"
@@ -13,9 +13,18 @@ dependencies = ["numpy", "scipy", "h5py", "opt-einsum"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 
-[tool.setuptools.packages.find]
-where = ["src"]  # list of folders that contain the packages (["."] by default)
-include = ["seemps*"]  # package names should match these glob patterns (["*"] by default)
+[tool.scikit-build]
+# Protect the configuration against future changes in scikit-build-core
+minimum-version = "0.4"
+
+# Setuptools-style build caching in a local directory
+build-dir = "build/{wheel_tag}"
+
+# Build stable ABI wheels for CPython 3.12+
+wheel.py-api = "cp312"
+
+wheel.packages = ["src/seemps"]
+wheel.exclude = ["*.cc", "*.h"]
 
 [tool.ruff]
 exclude = [
