--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [build-system]
-requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "pybind11", "numpy", "cmake"]
+requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "numpy", "cmake"]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "SeeMPS"
 version = "1.2"
-dependencies = ["numpy", "scipy", "h5py", "opt-einsum"]
+dependencies = ["numpy", "scipy", "h5py"]
 
 [project.urls]
 "Homepage" = "https://github.com/juanjosegarciaripoll/seemps"
