Fixed typing errors and duplicate definitions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "scipy",
     "h5py",
 ]
+requires-python = ">= 3.11"
 
 [project.urls]
 "Homepage" = "https://github.com/juanjosegarciaripoll/seemps"
@@ -52,3 +53,10 @@ skip-magic-trailing-comma = false
 
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
+
+[tool.mypy]
+plugins = ["numpy.typing.mypy_plugin"]
+
+# TODO: Require scipy-stubs, numpy-stubs, etc.
+warn_incomplete_stub = false
+ignore_missing_imports = true
