--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -6,24 +6,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v5
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 mypy
-      - name: Build and install
-        run: pip install .
+          # Install a specific version of uv.
+          version: "0.5.24"
+
+      - name: Install the project
+        run: uv sync --all-extras --dev
+
       - name: Run unit tests
-        run: python -m unittest discover -f
+        run: uv run python -m unittest discover -v
+
       - name: Check types with mypy
-        run: mypy src/seemps
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 src/seemps --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 src/seemps --count --exit-zero --statistics
+        run: uv run mypy src/seemps
+
+      - name: Lint with ruff
+        run: uv run ruff check src/seemps
