Added optype as dependency to get Numpy tensor types.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,9 @@ dev = [
     "basedpyright",
     "opt_einsum", # To test contractions
     "matplotlib", # For the examples
+	"optype[numpy]", # For typing tensors
     "ipykernel",
+	"scipy-stubs",
 ]
 
 [tool.basedpyright]
