Silence unused function warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,3 +113,5 @@ reportCallInDefaultInitializer = false
 # TODO: Rename imported functions with _ prefix
 reportPrivateLocalImportUsage = false
 reportUnknownArgumentType = false
+# TODO: Remove this to detect _check_convergence and other unused functions
+reportUnusedFunction=false
