--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.formatting.provider": "ruff",
-    "python.testing.unittestEnabled": false,
+    "python.testing.unittestEnabled": true,
     "python.testing.unittestArgs": [
         "-v",
         "-s",
@@ -8,7 +8,7 @@
         "-p",
         "test_*.py"
     ],
-    "python.testing.pytestEnabled": true,
+    "python.testing.pytestEnabled": false,
     "editor.formatOnSave": true,
     "python.autoComplete.extraPaths": [
         "${workspaceFolder}"
@@ -26,5 +26,11 @@
     ],
     "mypy-type-checker.importStrategy": "fromEnvironment",
     "mypy-type-checker.reportingScope": "workspace",
-    "mypy-type-checker.cwd": "${workspaceFolder}/src"
+    "mypy-type-checker.cwd": "${workspaceFolder}/src",
+    "python.analysis.typeCheckingMode": "standard",
+    "python.analysis.autoFormatStrings": true,
+    "python.analysis.importFormat": "relative",
+    "python.analysis.inlayHints.functionReturnTypes": false,
+    "python.analysis.languageServerMode": "full",
+    "mypy-type-checker.preferDaemon": true
 }
