Added files for publication in PyPI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,38 @@ requires = ["setuptools", "cython>=3.0.0", "numpy", "scipy"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "SeeMPS"
+name = "seemps"
 version = "2.3.1"
+description = "Matrix Product State library for quantum simulation and numerical analysis"
+readme = "README.md"
+license = {file = "LICENSE"}
+authors = [
+    {name = "Juan José García Ripoll", email = "juanjose.garciaripoll@gmail.com"},
+    {name = "Paula García Molina"},
+    {name = "Juan José Rodríguez aldavero"},
+]
+maintainers = [
+    {name = "Juan José García Ripoll", email = "juanjose.garciaripoll@gmail.com"},
+]
+keywords = [
+    "quantum-computing",
+    "matrix-product-states",
+    "tensor-networks",
+    "dmrg",
+    "numerical-analysis",
+    "quantum-simulation",
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Scientific/Engineering :: Physics",
+    "Topic :: Scientific/Engineering :: Mathematics",
+]
 dependencies = [
     "numpy",
     "scipy",
@@ -13,10 +43,11 @@ dependencies = [
 requires-python = ">= 3.11"
 
 [project.urls]
-"Homepage" = "https://github.com/juanjosegarciaripoll/seemps"
-
-[tool.pytest.ini_options]
-testpaths = ["tests"]
+"Homepage" = "https://github.com/juanjosegarciaripoll/seemps2"
+"Repository" = "https://github.com/juanjosegarciaripoll/seemps2"
+"Documentation" = "https://seemps2.hbar.es/"
+"Bug Tracker" = "https://github.com/juanjosegarciaripoll/seemps2/issues"
+"Changelog" = "https://github.com/juanjosegarciaripoll/seemps2/releases"
 
 [tool.setuptools.packages.find]
 where = ["src"]  # list of folders that contain the packages (["."] by default)
@@ -40,8 +71,16 @@ indent-width = 4
 
 [tool.ruff.lint]
 # Checks to ignore or add
-ignore = ["E741", "D103", "D100", "D104"]
+ignore = ["E741",
+    "D100",  # Missing docstring in public module
+    "D104",  # Missing docstring in public package
+    "D105",  # Missing docstring in magic method
+    "D107",  # Missing docstring in __init__
+]
 # select = ["D"]  # Enable pydocstyle checks
+
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
 
 [tool.ruff.format]
 # Like Black, use double quotes for strings.
@@ -56,7 +95,14 @@ skip-magic-trailing-comma = false
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
 
+[project.optional-dependencies]
+# Minimal optional deps for PyPI users
+test = [
+    "opt_einsum",  # For testing tensor contractions
+]
+
 [dependency-groups]
+# Local development dependencies (not published to PyPI)
 dev = [
     "numpy",
     "mypy>1.16",
@@ -108,18 +154,6 @@ reportPrivateLocalImportUsage = false
 reportUnknownArgumentType = false
 # TODO: Remove this to detect _check_convergence and other unused functions
 reportUnusedFunction=false
-
-[tool.pydocstyle]
-convention = "numpy"
-add-ignore = [
-    "D100",  # Missing docstring in public module
-    "D104",  # Missing docstring in public package
-    "D105",  # Missing docstring in magic method
-    "D107",  # Missing docstring in __init__
-]
-
-[tool.ruff.lint.pydocstyle]
-convention = "numpy"
 
 [tool.mypy]
 warn_incomplete_stub = false
