--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,9 +104,9 @@ test = [
 [dependency-groups]
 # Local development dependencies (not published to PyPI)
 dev = [
-    "numpy",
+    "numpy>=2.3",
     "mypy>=1.19",
-    "ruff>=0.9.3",
+    "ruff>=0.14",
     "basedpyright>=1.34",
     "darglint",      # Docstring-signature consistency
     "opt_einsum",    # To test contractions
