Upgrade python in github

--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -11,10 +11,10 @@ jobs:
       - name: Install uv and set the python version
         uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.11"
+          python-version: "3.13"
 
       - name: Install the project
-        run: uv sync --all-extras --dev
+        run: uv sync --all-extras --dev && uv pip install -e .
 
       - name: Run unit tests
         run: uv run scripts/make.py --test
