--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,6 +112,7 @@ dev = [
     "opt_einsum",    # To test contractions
     "optype[numpy]", # For typing tensors
     "scipy-stubs",
+    "coverage>=7.12.0",
 ]
 
 [tool.basedpyright]
