VSCode insists on setting colors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,5 +40,27 @@
     "python.analysis.typeEvaluation.deprecateTypingAliases": false,
     "python.analysis.typeEvaluation.enableReachabilityAnalysis": true,
     "python.experiments.enabled": false,
-    "python.testing.autoTestDiscoverOnSaveEnabled": false
+    "python.testing.autoTestDiscoverOnSaveEnabled": false,
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+            {
+                "scope": "googletest.failed",
+                "settings": {
+                    "foreground": "#f00"
+                }
+            },
+            {
+                "scope": "googletest.passed",
+                "settings": {
+                    "foreground": "#0f0"
+                }
+            },
+            {
+                "scope": "googletest.run",
+                "settings": {
+                    "foreground": "#0f0"
+                }
+            }
+        ]
+    }
 }
