--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,7 @@ dev = [
     "optype[numpy]", # For typing tensors
     "scipy-stubs",
     "coverage>=7.12.0",
+    "pre-commit>=4.5.0",
 ]
 
 [tool.basedpyright]
