Fixed cibuildwheel "publish" job

--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -189,6 +189,9 @@ jobs:
         with:
           version: latest
 
+      - name: Install build dependencies
+        run: uv sync --dev
+
       - name: Upload to PyPI
         env:
           TWINE_USERNAME: __token__
