--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -182,6 +182,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [prepare, sdist, wheels-linux]
     steps:
+      - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v4
 
       - name: Install uv
